# sokar-app

./: .gitignore  CMakeLists.txt  README.md  gdcm.mk  main.cpp  makefile  qqq  rebuild-res-qrc.sh  test.cpp
cmake/: add_shader.cmake  conan.cmake  eigen.cmake  gdcm.cmake  other.cmake  package.cmake  qt.cmake  rpm.cmake  shaders.cmake
convert/: convert.cpp  convert.h  imgwindow.cpp  imgwindow.h
doc/: .gitignore  1.medical-diagnostics.tex  2.browsers.tex  3.implemantation.tex  browsers.tex  commands.tex  index.tex  packages.tex
extra/: linux.desktop
qwidgets/: CMakeLists.txt  dicomgraphics.cpp  dicomgraphics.h  dicomscene.cpp  dicomscene.h  dicomtoolbar.cpp  dicomtoolbar.h  dicomview.cpp  dicomview.h  dicomview.ui  framechooser.cpp  framechooser.h  qdicomdataset.cpp  qdicomdataset.h  qdicomgraphics.cpp  qdicomgraphics.h  qdicomview.cpp  qdicomview.h  qdicomview.ui
qwidgets/scenes/: CMakeLists.txt  _classdef.h  dicomscene.cpp  dicomscene.h  dicomsceneset.cpp  dicomsceneset.h  header.h  indicator.cpp  indicator.h  monochrome2.cpp  monochrome2.h  params.cpp  params.h  scene.cpp  scene.h  sceneavatar.cpp  sceneavatar.h  scenecreator.cpp
res/: resources.qrc
res/lang/: pl.ts
res/vk-shader/: background.vert  color_phong.frag  color_phong.vert  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  staticMesh.frag.spv
scripts/: build-spv.sh
sokar/: dicomtags.h  exception.h  gdcmSokar.h  imgwindow.cpp  imgwindow.h  pixel.h  sceneparams.cpp  sceneparams.h  speedtest.h
sokar/windowing/: imgwindow.cpp  imgwindow.h  imgwindowINT.cpp  imgwindowINT.h  imgwindowUINT.cpp  imgwindowUINT.h  imgwindowint.cpp  imgwindowint.h
src/: QtUi.hpp  Sokar.cmake  Sokar3D.cpp  Sokar3D.hpp  SokarAlg.cpp  SokarAlg.hpp  SokarDicom.hpp  SokarException.hpp  SokarGdcm.hpp  SokarGlm.cpp  SokarGlm.hpp  SokarMacro.hpp  SokarScene.hpp  SokarUi.hpp  _classdef.h  main.cpp  sokar_glm.cpp  sokar_glm.h
src/3d/: Camera.cpp  Camera.h  CenterCamera.cpp  CenterCamera.h  GameCamera.h  Mesh.cpp  Mesh.h  MeshPipeline.cpp  MeshPipeline.h  MeshVertex.cpp  MeshVertex.h  PipelineWrapper.cpp  PipelineWrapper.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SimpleLight.cpp  SimpleLight.glsl  SimpleLight.h  SimpleLight.hpp  SolidMaterial.cpp  SolidMaterial.h  StaticMesh.cpp  StaticMesh.h  StaticMesh.hpp  Vertex.cpp  Vertex.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanWidget.cpp  VulkanWidget.h  _def.cpp  _def.h  vulkan_test.h
src/3d-party/: CMakeLists.txt
src/QtUi/: CMakeLists.txt  ComboBox.cpp  ComboBox.hpp  DoubleSpinBox.cpp  DoubleSpinBox.hpp  SpinBox.cpp  SpinBox.hpp  Vec3Input.cpp  Vec3Input.hpp  Vec3Input.ui
src/Sokar3D/: CMakeLists.txt  Camera.cpp  Camera.hpp  CenterCamera.cpp  CenterCamera.h  CenterCamera.hpp  CubedIndexedMesh.cpp  CubedIndexedMesh.hpp  GameCamera.cpp  GameCamera.h  GameCamera.hpp  IndexedMesh.cpp  IndexedMesh.hpp  Mesh.cpp  Mesh.hpp  MeshPipeline.cpp  MeshPipeline.hpp  MeshVertex.cpp  MeshVertex.h  MeshVertex.hpp  PipelineWrapper.cpp  PipelineWrapper.h  PipelineWrapper.hpp  Shader.h  SimpleLight.glsl  SimpleLight.hpp  Sokar3D.cpp  Sokar3D.hpp  SolidMaterial.glsl  SolidMaterial.hpp  StaticMesh.cpp  StaticMesh.hpp  TriangleListMesh.cpp  TriangleListMesh.frag  TriangleListMesh.hpp  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRenderer.hpp  VulkanShader.cpp  VulkanShader.hpp  (+2 more)
src/SokarAlg/: Algorithm.cpp  Algorithm.hpp  Array3.cpp  Array3.hpp  BoundingConvexDecomposition.cpp  BoundingConvexDecomposition.hpp  BoundingMeshSimplification.cpp  BoundingMeshSimplification.hpp  CMakeLists.txt  CachedVolume.cpp  CachedVolume.hpp  DebugVolume.cpp  DebugVolume.hpp  DicomVolume.cpp  DicomVolume.hpp  EdgeCollapse.cpp  EdgeCollapse.hpp  EdgeCollapseSimplification.cpp  EdgeCollapseSimplification.hpp  EdgeContraction.cpp  ExampleVolume.cpp  ExampleVolume.hpp  GradientVolume.cpp  GradientVolume.hpp  IndexedMesh.cpp  IndexedMesh.hpp  InterpolatedVolume.cpp  InterpolatedVolume.hpp  IsoRangeDistanceVolumeTransform.cpp  IsoRangeDistanceVolumeTransform.hpp  LineInterpolator.cpp  LineInterpolator.hpp  MarchingCubes.cpp  MarchingCubes.hpp  MarchingTetrahedrons.cpp  MarchingTetrahedrons.hpp  MeshSimplificator.cpp  MeshSimplificator.hpp  Range.hpp  RegionGrowthVolume.cpp  (+22 more)
src/SokarDicom/: CMakeLists.txt  DataConventer.cpp  DataConventer.hpp  File.cpp  File.hpp  SokarDicom.hpp
src/SokarLib/: CMakeLists.txt  Displayable.cpp  Displayable.hpp  HashCubeSpace.cpp  HashCubeSpace.hpp  Jsonable.cpp  Jsonable.hpp  Progress.cpp  Saveable.cpp  Saveable.h  SaveableAsText.cpp  SaveableAsText.hpp  ThreadCache.hpp  WavefrontObjBuilder.cpp  WavefrontObjBuilder.hpp  concat_array.h
src/SokarScene/: Avatar.cpp  Avatar.hpp  CMakeLists.txt  DicomScene.cpp  DicomScene.hpp  HospitalData.cpp  HospitalData.hpp  ImageOrientation.cpp  ImageOrientation.hpp  Indicator.cpp  Indicator.hpp  Modality.cpp  Modality.hpp  MousePosition.cpp  MousePosition.hpp  PatientData.cpp  PatientData.hpp  PixelSpacing.cpp  PixelSpacing.hpp  Scene.cpp  Scene.hpp  SceneIndicator.cpp  SceneIndicator.hpp  SceneParams.hpp
src/SokarUi/: About.cpp  About.hpp  CMakeLists.txt  DicomToolBar.cpp  DicomToolBar.hpp  SegmentationPipeline.cpp  SegmentationPipeline.hpp  SegmentationPipeline.ui  SegmentationPipelineEditor.cpp  SegmentationPipelineEditor.hpp  SegmentationPipelineEditor.ui  SegmentationResultWidget.cpp  SegmentationResultWidget.hpp  SegmentationResultWidget.ui  SegmentationWindow.cpp  SegmentationWindow.hpp  SegmentationWindow.ui  SokarUi.hpp  Vec3Input.cpp  Vec3Input.hpp  Vec3Input.ui  Window.cpp  Window.h  _def.h
src/algo/: AkimaInterpolation.cpp  AkimaInterpolation.h  Array3.cpp  Array3.h  Cube.cpp  Cube.h  DicomVolume.cpp  DicomVolume.h  DicomVolumeInterpolator.cpp  DicomVolumeInterpolator.h  ExampleVolume.cpp  ExampleVolume.h  Range.h  (+21 more)
win/: main_win.cpp  main_win.h  main_win.ui
(+177 files in other folders)
